--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Developer | Frontend Developer Portfolio</title>
+    <title>Nur Pratap Karki |  Portfolio</title>
     <meta name="description" content="Professional portfolio of John Developer, a Frontend Developer specializing in creating beautiful digital experiences." />
     <meta name="author" content="John Developer" />
 
