Fix 404 routing issues and asset paths

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nur Pratap Karki - Portfolio</title>
-    <meta name="description" content="Professional portfolio of John Developer, a Frontend Developer specializing in creating beautiful digital experiences." />
-    <meta name="author" content="John Developer" />
+    <meta name="description" content="Professional portfolio of Nur Pratap Karki, a Frontend Developer specializing in creating beautiful digital experiences." />
+    <meta name="author" content="Nur Pratap Karki" />
 
-    <meta property="og:title" content="John Developer | Frontend Developer Portfolio" />
-    <meta property="og:description" content="Professional portfolio of John Developer, a Frontend Developer specializing in creating beautiful digital experiences." />
+    <meta property="og:title" content="Nur Pratap Karki | Frontend Developer Portfolio" />
+    <meta property="og:description" content="Professional portfolio of Nur Pratap Karki, a Frontend Developer specializing in creating beautiful digital experiences." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@johndeveloper" />
+    <meta name="twitter:site" content="@nurpratapkarki" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,6 +41,6 @@
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
