--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <body>
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+    <script src="https://cdn.gpteng.co/gptengineer.js" type="text/javascript"></script>
     <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
